# indodax-bot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_add_user_token_hash.py  0003_add_token_expiry.py  README
bot/: config.py  keyboards.py  main.py
bot/handlers/: alerts.py  auth.py  market.py  orders.py  portfolio.py  start.py  strategy.py  trading.py
bot/services/: api_client.py  token_store.py
bot/utils/: auth.py  crypto.py  market.py  messages.py
core/: app.py  config.py  database.py  encryption.py  indodax_private_client.py  indodax_public_client.py  models.py
core/repositories/: base.py  key_repository.py  user_repository.py
core/routers/: __init__.py  alerts.py  auth.py  dependencies.py  market.py  notifications.py  orders.py  pnl.py  portfolio.py  strategies.py  system.py
core/schemas/: alert.py  auth.py  common.py  market.py  order.py  strategy.py
core/services/: alert_service.py  auth_service.py  notification_service.py  order_service.py  pnl_service.py  portfolio_service.py  safety_service.py  strategy_service.py
core/utils/: nonce.py  rate_limiter.py
docker/: telegram-bot.Dockerfile  trading-core.Dockerfile  worker.Dockerfile
scripts/: entrypoint_bot.sh  entrypoint_core.sh  entrypoint_worker.sh
tests/: test_auth_tokens.py  test_dca_flow.py  test_indodax_private_client.py  test_token_crypto.py  test_worker_tasks.py
worker/: config.py  price_feed.py  scheduler.py
worker/clients/: core_api.py
worker/tasks/: alerts.py  (+4 more)
(+2 files in other folders)
